--- a/recipes-setup/gnss-station/files/webroot/bstats_2y.htm
+++ b/recipes-setup/gnss-station/files/webroot/bstats_2y.htm
@@ -2,113 +2,83 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta http-equiv="refresh" content="300">
     <title>navdata.net basestation statistics</title>
-    <meta http-equiv="refresh" content="86400">
   </head>
   <body>
     <h1>navdata.net basestation statistics</h1>
-    <h2>2 years</h2>
+    <h2>2years</h2>
+    <h3>System</h3>
+    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+      <tbody>
+        <tr>
+          <th align='center'>CPU</th>
+          <th align='center'>RAMfree</th>
+        </tr>
+        <tr>
+          <td align='center'><img alt='CPU graph' src='volatile/rtkrcv_cpu_2y.png'></td>
+          <td align='center'><img alt='RAMfree graph' src='volatile/rtkrcv_mem_2y.png'></td>
+        </tr>
+    </table>
     <h3>Location</h3>
     <table border="1" cellpadding="2" cellspacing="2" width="100%">
       <tbody>
         <tr>
-          <td align="center">Latitude<br>
-          </td>
-          <td align="center">Longitude<br>
-          </td>
-          <td align="center">Height<br>
-          </td>
+          <th align='center'>Latitude</th>
+          <th align='center'>Longitude</th>
         </tr>
         <tr>
-          <td align="center"><img alt="Local Latitude"
-              src="volatile/rtkrcv_lat_2y.png"><br>
-          </td>
-          <td align="center"><img alt="Local Longitude"
-              src="volatile/rtkrcv_lon_2y.png"><br>
-          </td>
-          <td align="center"><img alt="Local Height"
-              src="volatile/rtkrcv_hght_2y.png"><br>
-          </td>
+          <td align='center'><img alt='Latitude graph' src='volatile/rtkrcv_lat_2y.png'></td>
+          <td align='center'><img alt='Longitude graph' src='volatile/rtkrcv_lon_2y.png'></td>
         </tr>
-      </tbody>
     </table>
-    <p><br>
-    <h3>Deviation</h3>
+    <h3></h3>
     <table border="1" cellpadding="2" cellspacing="2" width="100%">
       <tbody>
         <tr>
-          <td align="center">X<br>
-          </td>
-          <td align="center">Y<br>
-          </td>
-          <td align="center">Z<br>
-          </td>
+          <th align='center'>Height</th>
+          <th align='center'>Error</th>
         </tr>
         <tr>
-          <td align="center"><img alt="Local Latitude"
-              src="volatile/rtkrcv_fltsx_2y.png"><br>
-          </td>
-          <td align="center"><img alt="Local Longitude"
-              src="volatile/rtkrcv_fltsy_2y.png"><br>
-          </td>
-          <td align="center"><img alt="Local Height"
-              src="volatile/rtkrcv_fltsz_2y.png"><br>
-          </td>
+          <td align='center'><img alt='Height graph' src='volatile/rtkrcv_hght_2y.png'></td>
+          <td align='center'><img alt='Error graph' src='volatile/rtkrcv_err_2y.png'></td>
         </tr>
-      </tbody>
     </table>
-    </p>
-    <p><br>
-    <h3>Number of satellites</h3>
+    <h3>Satellites</h3>
     <table border="1" cellpadding="2" cellspacing="2" width="100%">
       <tbody>
         <tr>
-          <td align="center">Local<br>
-          </td>
-          <td align="center">Reference<br>
-          </td>
-          <td align="center">Matching in valid solution<br>
-          </td>
+          <th align='center'>LocalSATS</th>
+          <th align='center'>RemoteSATS</th>
         </tr>
         <tr>
-          <td align="center"><img alt="Local Latitude"
-              src="volatile/rtkrcv_rsat_2y.png"><br>
-          </td>
-          <td align="center"><img alt="Local Longitude"
-              src="volatile/rtkrcv_bsat_2y.png"><br>
-          </td>
-          <td align="center"><img alt="Local Height"
-              src="volatile/rtkrcv_vsat_2y.png"><br>
-          </td>
+          <td align='center'><img alt='LocalSATS graph' src='volatile/rtkrcv_rsat_2y.png'></td>
+          <td align='center'><img alt='RemoteSATS graph' src='volatile/rtkrcv_bsat_2y.png'></td>
         </tr>
-      </tbody>
     </table>
-    </p>
-    <p><br>
-    <h3>Other information</h3>
+    <h3>Distance</h3>
     <table border="1" cellpadding="2" cellspacing="2" width="100%">
       <tbody>
         <tr>
-          <td align="center">Local to Reference distance<br>
-          </td>
-          <td align="center">AR ratio<br>
-          </td>
-          <td align="center">Differential data age<br>
-          </td>
+          <th align='center'>StationDistance</th>
+          <th align='center'>DiffdataAge</th>
         </tr>
         <tr>
-          <td align="center"><img alt="Local Latitude"
-              src="volatile/rtkrcv_bline_2y.png"><br>
-          </td>
-          <td align="center"><img alt="Local Longitude"
-              src="volatile/rtkrcv_arr_2y.png"><br>
-          </td>
-          <td align="center"><img alt="Local Height"
-              src="volatile/rtkrcv_dage_2y.png"><br>
-          </td>
+          <td align='center'><img alt='StationDistance graph' src='volatile/rtkrcv_bline_2y.png'></td>
+          <td align='center'><img alt='DiffdataAge graph' src='volatile/rtkrcv_dage_2y.png'></td>
         </tr>
-      </tbody>
     </table>
-    </p>
+    <h3>Resolution</h3>
+    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+      <tbody>
+        <tr>
+          <th align='center'>MatchingSATS</th>
+          <th align='center'>ARratio</th>
+        </tr>
+        <tr>
+          <td align='center'><img alt='MatchingSATS graph' src='volatile/rtkrcv_vsat_2y.png'></td>
+          <td align='center'><img alt='ARratio graph' src='volatile/rtkrcv_arr_2y.png'></td>
+        </tr>
+    </table>
   </body>
 </html>
