--- a/recipes-setup/gnss-station/files/webroot/index.htm
+++ b/recipes-setup/gnss-station/files/webroot/index.htm
@@ -2,14 +2,55 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Basestation Statistics</title>
+    <title>navdata.net Basestation Statistics</title>
+    <meta http-equiv="refresh" content="300">
   </head>
   <body>
-    <h1>Basestation Statistics</h1>
+    <h1>System Statistics</h1>
+    <h2>Dashboard, 1 day</h2>
+    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+      <tbody>
+        <tr>
+          <th align="center">CPU load</th>
+          <th align="center">RAM free</th>
+        </tr>
+        <tr>
+          <td align="center"><img alt="CPU load graph" src="volatile/rtkrcv_cpu_1d.png"></td>
+          <td align="center"><img alt="RAM free graph" src="volatile/rtkrcv_mem_1d.png"></td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
+    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+      <tbody>
+        <tr>
+          <th align="center">Latitude</th>
+          <th align="center">Longitude</th>
+        </tr>
+        <tr>
+          <td align="center"><img alt="Latitude graph" src="volatile/rtkrcv_lat_1d.png"></td>
+          <td align="center"><img alt="Longitude graph" src="volatile/rtkrcv_lon_1d.png"></td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
+    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+      <tbody>
+        <tr>
+          <th align="center">Height</th>
+          <th align="center">Satellites</th>
+        </tr>
+        <tr>
+          <td align="center"><img alt="Height graph" src="volatile/rtkrcv_hght_1d.png"></td>
+          <td align="center"><img alt="Satellites graph" src="volatile/rtkrcv_rsat_1d.png"></td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
+    <h2>Detailed Statistics</h2>
     <a href="bstats_30m.htm">last 30 minutes</a><br>
     <a href="bstats_1d.htm">last 1 day</a><br>
     <a href="bstats_2w.htm">last 2 weeks</a><br>
     <a href="bstats_2y.htm">last 2 years</a><br>
-    <br>
   </body>
 </html>
