Tables shall not expand to full width

--- a/recipes-setup/gnss-station/files/webroot/bstats_1d.htm
+++ b/recipes-setup/gnss-station/files/webroot/bstats_1d.htm
@@ -9,7 +9,7 @@
     <h1>navdata.net basestation statistics</h1>
     <h2>1day</h2>
     <h3>System</h3>
-    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+    <table border="1" cellpadding="2" cellspacing="2">
       <tbody>
         <tr>
           <th align='center'>CPU</th>
@@ -21,7 +21,7 @@
         </tr>
     </table>
     <h3>Location</h3>
-    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+    <table border="1" cellpadding="2" cellspacing="2">
       <tbody>
         <tr>
           <th align='center'>Latitude</th>
@@ -33,7 +33,7 @@
         </tr>
     </table>
     <h3></h3>
-    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+    <table border="1" cellpadding="2" cellspacing="2">
       <tbody>
         <tr>
           <th align='center'>Height</th>
@@ -45,7 +45,7 @@
         </tr>
     </table>
     <h3>Satellites</h3>
-    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+    <table border="1" cellpadding="2" cellspacing="2">
       <tbody>
         <tr>
           <th align='center'>LocalSATS</th>
@@ -57,7 +57,7 @@
         </tr>
     </table>
     <h3>Distance</h3>
-    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+    <table border="1" cellpadding="2" cellspacing="2">
       <tbody>
         <tr>
           <th align='center'>StationDistance</th>
@@ -69,7 +69,7 @@
         </tr>
     </table>
     <h3>Resolution</h3>
-    <table border="1" cellpadding="2" cellspacing="2" width="100%">
+    <table border="1" cellpadding="2" cellspacing="2">
       <tbody>
         <tr>
           <th align='center'>MatchingSATS</th>
