More statistics, stability, and extraction of configuration

--- a/recipes-setup/gnss-station/files/webroot/bstats_30m.htm
+++ b/recipes-setup/gnss-station/files/webroot/bstats_30m.htm
@@ -37,11 +37,11 @@
       <tbody>
         <tr>
           <th align='center'>Height</th>
-          <th align='center'>Error</th>
+          <th align='center'>Status</th>
         </tr>
         <tr>
           <td align='center'><img alt='Height graph' src='volatile/rtkrcv_hght_30m.png'></td>
-          <td align='center'><img alt='Error graph' src='volatile/rtkrcv_err_30m.png'></td>
+          <td align='center'><img alt='Status graph' src='volatile/rtkrcv_stat_30m.png'></td>
         </tr>
     </table>
     <h3>Satellites</h3>
@@ -56,18 +56,6 @@
           <td align='center'><img alt='RemoteSATS graph' src='volatile/rtkrcv_bsat_30m.png'></td>
         </tr>
     </table>
-    <h3>Distance</h3>
-    <table border="1" cellpadding="2" cellspacing="2">
-      <tbody>
-        <tr>
-          <th align='center'>StationDistance</th>
-          <th align='center'>DiffdataAge</th>
-        </tr>
-        <tr>
-          <td align='center'><img alt='StationDistance graph' src='volatile/rtkrcv_bline_30m.png'></td>
-          <td align='center'><img alt='DiffdataAge graph' src='volatile/rtkrcv_dage_30m.png'></td>
-        </tr>
-    </table>
     <h3>Resolution</h3>
     <table border="1" cellpadding="2" cellspacing="2">
       <tbody>
@@ -78,6 +66,18 @@
         <tr>
           <td align='center'><img alt='MatchingSATS graph' src='volatile/rtkrcv_vsat_30m.png'></td>
           <td align='center'><img alt='ARratio graph' src='volatile/rtkrcv_arr_30m.png'></td>
+        </tr>
+    </table>
+    <h3>Distance</h3>
+    <table border="1" cellpadding="2" cellspacing="2">
+      <tbody>
+        <tr>
+          <th align='center'>StationDistance</th>
+          <th align='center'>DiffdataAge</th>
+        </tr>
+        <tr>
+          <td align='center'><img alt='StationDistance graph' src='volatile/rtkrcv_bline_30m.png'></td>
+          <td align='center'><img alt='DiffdataAge graph' src='volatile/rtkrcv_dage_30m.png'></td>
         </tr>
     </table>
   </body>
