--- a/recipes-setup/gnss-station/files/webroot/index.htm
+++ b/recipes-setup/gnss-station/files/webroot/index.htm
@@ -15,8 +15,8 @@
           <th align="center">RAM free</th>
         </tr>
         <tr>
-          <td align="center"><img alt="CPU load graph" src="volatile/rtkrcv_cpu_1d.png"></td>
-          <td align="center"><img alt="RAM free graph" src="volatile/rtkrcv_mem_1d.png"></td>
+          <td align="center"><img alt="CPU load graph" src="volatile/rtkrcv_sys_CPU_1d.png"></td>
+          <td align="center"><img alt="RAM free graph" src="volatile/rtkrcv_sys_MemFree_1d.png"></td>
         </tr>
       </tbody>
     </table>
@@ -28,8 +28,8 @@
           <th align="center">Longitude</th>
         </tr>
         <tr>
-          <td align="center"><img alt="Latitude graph" src="volatile/rtkrcv_lat_1d.png"></td>
-          <td align="center"><img alt="Longitude graph" src="volatile/rtkrcv_lon_1d.png"></td>
+          <td align="center"><img alt="Latitude graph" src="volatile/rtkrcv_solllh_Lat_1d.png"></td>
+          <td align="center"><img alt="Longitude graph" src="volatile/rtkrcv_solllh_Lon_1d.png"></td>
         </tr>
       </tbody>
     </table>
@@ -38,11 +38,11 @@
       <tbody>
         <tr>
           <th align="center">Height</th>
-          <th align="center">Satellites</th>
+          <th align="center">Status</th>
         </tr>
         <tr>
-          <td align="center"><img alt="Height graph" src="volatile/rtkrcv_hght_1d.png"></td>
-          <td align="center"><img alt="Satellites graph" src="volatile/rtkrcv_rsat_1d.png"></td>
+          <td align="center"><img alt="Height graph" src="volatile/rtkrcv_solllh_Hght_1d.png"></td>
+          <td align="center"><img alt="Satellites graph" src="volatile/rtkrcv_stat_Status_1d.png"></td>
         </tr>
       </tbody>
     </table>
