Replace 2y rrd by 2m

--- a/recipes-setup/gnss-station/files/webroot/index.htm
+++ b/recipes-setup/gnss-station/files/webroot/index.htm
@@ -51,6 +51,6 @@
     <a href="bstats_30m.htm">last 30 minutes</a><br>
     <a href="bstats_1d.htm">last 1 day</a><br>
     <a href="bstats_2w.htm">last 2 weeks</a><br>
-    <a href="bstats_2y.htm">last 2 years</a><br>
+    <a href="bstats_2m.htm">last 2 months</a><br>
   </body>
 </html>
